# threaded_boids

./: .gitmodules  CMakeLists.txt  README.md
01_cpp_threading/: CMakeLists.txt  Common.hpp  Flock.cpp  README.md  main.cpp  measures.txt  tests_time.sh
01_cpp_threading/src/: Flock.cpp  Flock.hpp
02_tbb/: Boid.cpp  CMakeLists.txt  Common.hpp  Flock.cpp  main.cpp
02_tbb/src/: Boid.hpp  Common.hpp  Flock.cpp  Flock.hpp  Vector2D.hpp
03_cuda/: Boid.cpp  Boid.hpp  CMakeLists.txt  Common.hpp  Flock.cpp  Flock.hpp  kernel.cu  main.cpp  measures.txt  tests_time.sh
04a_opencl_cpu_gpu/: Boid.hpp  CMakeLists.txt  Common.hpp  Flock.cpp  Flock.hpp  kernel.cl  main.cpp
04b_opencl_gpu_only/: Boid.cpp  CMakeLists.txt  Common.hpp  Flock.cpp  Flock.hpp  Vector2D.cpp  main.cpp  measures.txt  tests_time.sh
